07 - Microservices/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
spec:  
  selector:
    app: httpd
  ports:
    - name: http
      port: 8080
      targetPort: 8080
