07 - Microservices/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: httpd-route
spec:
  host: web-server.apps-crc.testing
  to:
    kind: Service
    name: httpd-service
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
